Workaround z-index issue with Vanilla tabs and contextual menu

--- a/static/sass/_snapcraft_release.scss
+++ b/static/sass/_snapcraft_release.scss
@@ -444,6 +444,7 @@
 
   .p-contextual-menu__dropdown {
     overflow: visible; // allow tooltips inside menu
+    z-index: 2; // workaround for https://github.com/canonical-web-and-design/vanilla-framework/issues/2577
 
     .p-tooltip {
       display: block;
